@@ -2142,3 +2142,4 @@
 * pheno:   made clients inactivityTime value calculation ETPro compatible
 * pheno:   fixed a bug where client wasn't moved to spectators if g_inactivityOptions
            flag '4' is set
+* pheno:   fixed a bug where a muted player could use the say_teamnl command
